--- a/Petmeets_backend/package.json
+++ b/Petmeets_backend/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parse": "^0.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.2",
     "mysql2-promise": "^0.1.4",
     "nodemon": "^3.1.0",
